--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
                     <div class="video-info">
                         <h3>VIKKSTAR FIRST ASIA TOUR!</h3>
                         <div class="channel">Vikkstar123</div>
-                        <div class="date">16 hours ago</div>
+                        <div class="date">17 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -178,7 +178,7 @@
                     <div class="video-info">
                         <h3>Vastu – Myth or Science? | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">18 hours ago</div>
+                        <div class="date">19 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -189,7 +189,7 @@
                     <div class="video-info">
                         <h3>What's really stopping traders in 2025?</h3>
                         <div class="channel">Charlie Burton Trading</div>
-                        <div class="date">22 hours ago</div>
+                        <div class="date">23 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -222,7 +222,7 @@
                     <div class="video-info">
                         <h3>What is Sadhguru’s Daily Routine? @curly.tales asks</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">23 hours ago</div>
+                        <div class="date">Yesterday</div>
                     </div>
                 </a>
             </div>
@@ -2327,7 +2327,7 @@
                     <div class="video-info">
                         <h3>I love spinning pizza #pizza #cooking #funny #pizzalover #pizzapie</h3>
                         <div class="channel">Massimo Nocerino Pizza Massimo</div>
-                        <div class="date">4 weeks ago</div>
+                        <div class="date">Sep 12, 2025</div>
                     </div>
                 </a>
             </div>
@@ -5094,7 +5094,7 @@
                         <div class="video-info">
                             <h3>What's really stopping traders in 2025?</h3>
                             <div class="channel">Charlie Burton Trading</div>
-                            <div class="date">22 hours ago</div>
+                            <div class="date">23 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7249,7 +7249,7 @@
                         <div class="video-info">
                             <h3>Vastu – Myth or Science? | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">18 hours ago</div>
+                            <div class="date">19 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7271,7 +7271,7 @@
                         <div class="video-info">
                             <h3>What is Sadhguru’s Daily Routine? @curly.tales asks</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">23 hours ago</div>
+                            <div class="date">Yesterday</div>
                         </div>
                     </a>
                 </div>
@@ -8977,7 +8977,7 @@
                         <div class="video-info">
                             <h3>I love spinning pizza #pizza #cooking #funny #pizzalover #pizzapie</h3>
                             <div class="channel">Massimo Nocerino Pizza Massimo</div>
-                            <div class="date">4 weeks ago</div>
+                            <div class="date">Sep 12, 2025</div>
                         </div>
                     </a>
                 </div>
@@ -9583,7 +9583,7 @@
                         <div class="video-info">
                             <h3>VIKKSTAR FIRST ASIA TOUR!</h3>
                             <div class="channel">Vikkstar123</div>
-                            <div class="date">16 hours ago</div>
+                            <div class="date">17 hours ago</div>
                         </div>
                     </a>
                 </div>
