--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>Michael Singer - Levels of Spiritual Growth</h3>
                         <div class="channel">Seats of Contemplation</div>
-                        <div class="date">24 minutes ago</div>
+                        <div class="date">31 minutes ago</div>
                     </div>
                 </a>
             </div>
@@ -141,9 +141,9 @@
         
             <div class="video">
                 <a href="https://www.youtube.com/watch?v=Ozzulu8RHRo" target="_blank">
-                    <img src="https://i.ytimg.com/vi/Ozzulu8RHRo/mqdefault.jpg" alt="SIDEMEN ULTIMATE PRECISION TEST">
+                    <img src="https://i.ytimg.com/vi/Ozzulu8RHRo/mqdefault.jpg" alt="SIDEMEN EXTREME PRECISION TEST">
                     <div class="video-info">
-                        <h3>SIDEMEN ULTIMATE PRECISION TEST</h3>
+                        <h3>SIDEMEN EXTREME PRECISION TEST</h3>
                         <div class="channel">MoreSidemen</div>
                         <div class="date">11 hours ago</div>
                     </div>
@@ -178,7 +178,7 @@
                     <div class="video-info">
                         <h3>VIKKSTAR FIRST ASIA TOUR!</h3>
                         <div class="channel">Vikkstar123</div>
-                        <div class="date">17 hours ago</div>
+                        <div class="date">18 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -189,7 +189,7 @@
                     <div class="video-info">
                         <h3>Vastu – Myth or Science? | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">19 hours ago</div>
+                        <div class="date">20 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -200,7 +200,7 @@
                     <div class="video-info">
                         <h3>What's really stopping traders in 2025?</h3>
                         <div class="channel">Charlie Burton Trading</div>
-                        <div class="date">23 hours ago</div>
+                        <div class="date">Yesterday</div>
                     </div>
                 </a>
             </div>
@@ -5094,7 +5094,7 @@
                         <div class="video-info">
                             <h3>What's really stopping traders in 2025?</h3>
                             <div class="channel">Charlie Burton Trading</div>
-                            <div class="date">23 hours ago</div>
+                            <div class="date">Yesterday</div>
                         </div>
                     </a>
                 </div>
@@ -7238,7 +7238,7 @@
                         <div class="video-info">
                             <h3>Michael Singer - Levels of Spiritual Growth</h3>
                             <div class="channel">Seats of Contemplation</div>
-                            <div class="date">24 minutes ago</div>
+                            <div class="date">31 minutes ago</div>
                         </div>
                     </a>
                 </div>
@@ -7260,7 +7260,7 @@
                         <div class="video-info">
                             <h3>Vastu – Myth or Science? | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">19 hours ago</div>
+                            <div class="date">20 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -9568,9 +9568,9 @@
         
                 <div class="video">
                     <a href="https://www.youtube.com/watch?v=Ozzulu8RHRo" target="_blank">
-                        <img src="https://i.ytimg.com/vi/Ozzulu8RHRo/mqdefault.jpg" alt="SIDEMEN ULTIMATE PRECISION TEST">
+                        <img src="https://i.ytimg.com/vi/Ozzulu8RHRo/mqdefault.jpg" alt="SIDEMEN EXTREME PRECISION TEST">
                         <div class="video-info">
-                            <h3>SIDEMEN ULTIMATE PRECISION TEST</h3>
+                            <h3>SIDEMEN EXTREME PRECISION TEST</h3>
                             <div class="channel">MoreSidemen</div>
                             <div class="date">11 hours ago</div>
                         </div>
@@ -9583,7 +9583,7 @@
                         <div class="video-info">
                             <h3>VIKKSTAR FIRST ASIA TOUR!</h3>
                             <div class="channel">Vikkstar123</div>
-                            <div class="date">17 hours ago</div>
+                            <div class="date">18 hours ago</div>
                         </div>
                     </a>
                 </div>
