--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
                     <div class="video-info">
                         <h3>Backtest Accuracy: Matching Your Live Trading Results #shorts</h3>
                         <div class="channel">Algo Trading With Kevin Davey</div>
-                        <div class="date">Yesterday</div>
+                        <div class="date">2 days ago</div>
                     </div>
                 </a>
             </div>
@@ -5138,7 +5138,7 @@
                         <div class="video-info">
                             <h3>Backtest Accuracy: Matching Your Live Trading Results #shorts</h3>
                             <div class="channel">Algo Trading With Kevin Davey</div>
-                            <div class="date">Yesterday</div>
+                            <div class="date">2 days ago</div>
                         </div>
                     </a>
                 </div>
