--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>How Yantras Influence Your Body | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">13 minutes ago</div>
+                        <div class="date">42 minutes ago</div>
                     </div>
                 </a>
             </div>
@@ -134,7 +134,7 @@
                     <div class="video-info">
                         <h3>The Big Challenge Before Humanity | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">2 hours ago</div>
+                        <div class="date">3 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -145,7 +145,7 @@
                     <div class="video-info">
                         <h3>Can Labour be saved?</h3>
                         <div class="channel">Garys Economics</div>
-                        <div class="date">3 hours ago</div>
+                        <div class="date">4 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -156,7 +156,7 @@
                     <div class="video-info">
                         <h3>Michael Singer - Levels of Spiritual Growth</h3>
                         <div class="channel">Seats of Contemplation</div>
-                        <div class="date">4 hours ago</div>
+                        <div class="date">5 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -167,7 +167,7 @@
                     <div class="video-info">
                         <h3>My New "Trading System" Kills the Market Over 17 Years</h3>
                         <div class="channel">Scott Welsh Strategies</div>
-                        <div class="date">7 hours ago</div>
+                        <div class="date">8 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -200,7 +200,7 @@
                     <div class="video-info">
                         <h3>I Tested 3 Flours for Neapolitan Pizza — Here’s The Winner!</h3>
                         <div class="channel">Julian Sisofo</div>
-                        <div class="date">21 hours ago</div>
+                        <div class="date">22 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -1480,7 +1480,7 @@
                     <div class="video-info">
                         <h3>When RSI Crosses 70, How Often Does It Keep Climbing?</h3>
                         <div class="channel">Quantified Strategies</div>
-                        <div class="date">1 week ago</div>
+                        <div class="date">2 weeks ago</div>
                     </div>
                 </a>
             </div>
@@ -5083,7 +5083,7 @@
                         <div class="video-info">
                             <h3>Can Labour be saved?</h3>
                             <div class="channel">Garys Economics</div>
-                            <div class="date">3 hours ago</div>
+                            <div class="date">4 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5094,7 +5094,7 @@
                         <div class="video-info">
                             <h3>My New "Trading System" Kills the Market Over 17 Years</h3>
                             <div class="channel">Scott Welsh Strategies</div>
-                            <div class="date">7 hours ago</div>
+                            <div class="date">8 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5681,7 +5681,7 @@
                         <div class="video-info">
                             <h3>When RSI Crosses 70, How Often Does It Keep Climbing?</h3>
                             <div class="channel">Quantified Strategies</div>
-                            <div class="date">1 week ago</div>
+                            <div class="date">2 weeks ago</div>
                         </div>
                     </a>
                 </div>
@@ -7238,7 +7238,7 @@
                         <div class="video-info">
                             <h3>How Yantras Influence Your Body | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">13 minutes ago</div>
+                            <div class="date">42 minutes ago</div>
                         </div>
                     </a>
                 </div>
@@ -7249,7 +7249,7 @@
                         <div class="video-info">
                             <h3>The Big Challenge Before Humanity | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">2 hours ago</div>
+                            <div class="date">3 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7260,7 +7260,7 @@
                         <div class="video-info">
                             <h3>Michael Singer - Levels of Spiritual Growth</h3>
                             <div class="channel">Seats of Contemplation</div>
-                            <div class="date">4 hours ago</div>
+                            <div class="date">5 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -8735,7 +8735,7 @@
                         <div class="video-info">
                             <h3>I Tested 3 Flours for Neapolitan Pizza — Here’s The Winner!</h3>
                             <div class="channel">Julian Sisofo</div>
-                            <div class="date">21 hours ago</div>
+                            <div class="date">22 hours ago</div>
                         </div>
                     </a>
                 </div>
