--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
                     <div class="video-info">
                         <h3>VIKKSTAR FIRST ASIA TOUR!</h3>
                         <div class="channel">Vikkstar123</div>
-                        <div class="date">23 hours ago</div>
+                        <div class="date">Yesterday</div>
                     </div>
                 </a>
             </div>
@@ -9583,7 +9583,7 @@
                         <div class="video-info">
                             <h3>VIKKSTAR FIRST ASIA TOUR!</h3>
                             <div class="channel">Vikkstar123</div>
-                            <div class="date">23 hours ago</div>
+                            <div class="date">Yesterday</div>
                         </div>
                     </a>
                 </div>
