--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                     <div class="video-info">
                         <h3>The Big Challenge Before Humanity | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">4 hours ago</div>
+                        <div class="date">5 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -145,7 +145,7 @@
                     <div class="video-info">
                         <h3>Can Labour be saved?</h3>
                         <div class="channel">Garys Economics</div>
-                        <div class="date">5 hours ago</div>
+                        <div class="date">6 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -156,7 +156,7 @@
                     <div class="video-info">
                         <h3>Michael Singer - Levels of Spiritual Growth</h3>
                         <div class="channel">Seats of Contemplation</div>
-                        <div class="date">6 hours ago</div>
+                        <div class="date">7 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -167,7 +167,7 @@
                     <div class="video-info">
                         <h3>My New "Trading System" Kills the Market Over 17 Years</h3>
                         <div class="channel">Scott Welsh Strategies</div>
-                        <div class="date">9 hours ago</div>
+                        <div class="date">10 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -200,7 +200,7 @@
                     <div class="video-info">
                         <h3>I Tested 3 Flours for Neapolitan Pizza — Here’s The Winner!</h3>
                         <div class="channel">Julian Sisofo</div>
-                        <div class="date">23 hours ago</div>
+                        <div class="date">Yesterday</div>
                     </div>
                 </a>
             </div>
@@ -321,7 +321,7 @@
                     <div class="video-info">
                         <h3>Stop Letting Life Control You | Eckhart Tolle on Peace, Presence and Inner Freedom (Part 2)</h3>
                         <div class="channel">Eckhart Tolle</div>
-                        <div class="date">Yesterday</div>
+                        <div class="date">2 days ago</div>
                     </div>
                 </a>
             </div>
@@ -387,7 +387,7 @@
                     <div class="video-info">
                         <h3>I can Finally Live off Trading only (Full Breakdown)</h3>
                         <div class="channel">René Balke - Fx Bot Trading</div>
-                        <div class="date">2 days ago</div>
+                        <div class="date">3 days ago</div>
                     </div>
                 </a>
             </div>
@@ -398,7 +398,7 @@
                     <div class="video-info">
                         <h3>How to Stop Judging and Start Living in Presence | Eckhart Tolle on Peace & Inner Freedom (Part 1)</h3>
                         <div class="channel">Eckhart Tolle</div>
-                        <div class="date">2 days ago</div>
+                        <div class="date">3 days ago</div>
                     </div>
                 </a>
             </div>
@@ -508,7 +508,7 @@
                     <div class="video-info">
                         <h3>Can Vastu Really Change Your Life? | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">3 days ago</div>
+                        <div class="date">4 days ago</div>
                     </div>
                 </a>
             </div>
@@ -519,7 +519,7 @@
                     <div class="video-info">
                         <h3>Understanding the Pain-Body | A Special 3 Part Compilation from Eckhart Tolle</h3>
                         <div class="channel">Eckhart Tolle</div>
-                        <div class="date">3 days ago</div>
+                        <div class="date">4 days ago</div>
                     </div>
                 </a>
             </div>
@@ -629,7 +629,7 @@
                     <div class="video-info">
                         <h3>Suffering and Spiritual Awakening | Eckhart Tolle On The Path To Enlightenment (Part 3)</h3>
                         <div class="channel">Eckhart Tolle</div>
-                        <div class="date">4 days ago</div>
+                        <div class="date">5 days ago</div>
                     </div>
                 </a>
             </div>
@@ -783,7 +783,7 @@
                     <div class="video-info">
                         <h3>Payouts Rejected and Accounts Terminated!? The REAL REASON why I left FTMO</h3>
                         <div class="channel">René Balke - Fx Bot Trading</div>
-                        <div class="date">6 days ago</div>
+                        <div class="date">1 week ago</div>
                     </div>
                 </a>
             </div>
@@ -794,7 +794,7 @@
                     <div class="video-info">
                         <h3>The Hedge Fund Strategy No One Talks About 🧠💰</h3>
                         <div class="channel">Ali Casey | StatOasis</div>
-                        <div class="date">6 days ago</div>
+                        <div class="date">1 week ago</div>
                     </div>
                 </a>
             </div>
@@ -5083,7 +5083,7 @@
                         <div class="video-info">
                             <h3>Can Labour be saved?</h3>
                             <div class="channel">Garys Economics</div>
-                            <div class="date">5 hours ago</div>
+                            <div class="date">6 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5094,7 +5094,7 @@
                         <div class="video-info">
                             <h3>My New "Trading System" Kills the Market Over 17 Years</h3>
                             <div class="channel">Scott Welsh Strategies</div>
-                            <div class="date">9 hours ago</div>
+                            <div class="date">10 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5149,7 +5149,7 @@
                         <div class="video-info">
                             <h3>I can Finally Live off Trading only (Full Breakdown)</h3>
                             <div class="channel">René Balke - Fx Bot Trading</div>
-                            <div class="date">2 days ago</div>
+                            <div class="date">3 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -5281,7 +5281,7 @@
                         <div class="video-info">
                             <h3>Payouts Rejected and Accounts Terminated!? The REAL REASON why I left FTMO</h3>
                             <div class="channel">René Balke - Fx Bot Trading</div>
-                            <div class="date">6 days ago</div>
+                            <div class="date">1 week ago</div>
                         </div>
                     </a>
                 </div>
@@ -5292,7 +5292,7 @@
                         <div class="video-info">
                             <h3>The Hedge Fund Strategy No One Talks About 🧠💰</h3>
                             <div class="channel">Ali Casey | StatOasis</div>
-                            <div class="date">6 days ago</div>
+                            <div class="date">1 week ago</div>
                         </div>
                     </a>
                 </div>
@@ -7249,7 +7249,7 @@
                         <div class="video-info">
                             <h3>The Big Challenge Before Humanity | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">4 hours ago</div>
+                            <div class="date">5 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7260,7 +7260,7 @@
                         <div class="video-info">
                             <h3>Michael Singer - Levels of Spiritual Growth</h3>
                             <div class="channel">Seats of Contemplation</div>
-                            <div class="date">6 hours ago</div>
+                            <div class="date">7 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7337,7 +7337,7 @@
                         <div class="video-info">
                             <h3>Stop Letting Life Control You | Eckhart Tolle on Peace, Presence and Inner Freedom (Part 2)</h3>
                             <div class="channel">Eckhart Tolle</div>
-                            <div class="date">Yesterday</div>
+                            <div class="date">2 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -7381,7 +7381,7 @@
                         <div class="video-info">
                             <h3>How to Stop Judging and Start Living in Presence | Eckhart Tolle on Peace & Inner Freedom (Part 1)</h3>
                             <div class="channel">Eckhart Tolle</div>
-                            <div class="date">2 days ago</div>
+                            <div class="date">3 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -7436,7 +7436,7 @@
                         <div class="video-info">
                             <h3>Can Vastu Really Change Your Life? | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">3 days ago</div>
+                            <div class="date">4 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -7447,7 +7447,7 @@
                         <div class="video-info">
                             <h3>Understanding the Pain-Body | A Special 3 Part Compilation from Eckhart Tolle</h3>
                             <div class="channel">Eckhart Tolle</div>
-                            <div class="date">3 days ago</div>
+                            <div class="date">4 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -7491,7 +7491,7 @@
                         <div class="video-info">
                             <h3>Suffering and Spiritual Awakening | Eckhart Tolle On The Path To Enlightenment (Part 3)</h3>
                             <div class="channel">Eckhart Tolle</div>
-                            <div class="date">4 days ago</div>
+                            <div class="date">5 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -8735,7 +8735,7 @@
                         <div class="video-info">
                             <h3>I Tested 3 Flours for Neapolitan Pizza — Here’s The Winner!</h3>
                             <div class="channel">Julian Sisofo</div>
-                            <div class="date">23 hours ago</div>
+                            <div class="date">Yesterday</div>
                         </div>
                     </a>
                 </div>
