--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>Why Z-Score RSI Beats Regular RSI in Choppy Markets 💡</h3>
                         <div class="channel">Ali Casey | StatOasis</div>
-                        <div class="date">12 minutes ago</div>
+                        <div class="date">20 minutes ago</div>
                     </div>
                 </a>
             </div>
@@ -134,7 +134,7 @@
                     <div class="video-info">
                         <h3>How Yantras Influence Your Body | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">2 hours ago</div>
+                        <div class="date">3 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -321,7 +321,7 @@
                     <div class="video-info">
                         <h3>A Young Boy Asks Sadhguru About Lies</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">Yesterday</div>
+                        <div class="date">2 days ago</div>
                     </div>
                 </a>
             </div>
@@ -728,7 +728,7 @@
                     <div class="video-info">
                         <h3>Why Porn Addiction Is A Mental Sickness | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">5 days ago</div>
+                        <div class="date">6 days ago</div>
                     </div>
                 </a>
             </div>
@@ -2316,7 +2316,7 @@
                     <div class="video-info">
                         <h3>Stop Letting the News Ruin Your Peace</h3>
                         <div class="channel">Einzelgänger</div>
-                        <div class="date">4 weeks ago</div>
+                        <div class="date">Sep 12, 2025</div>
                     </div>
                 </a>
             </div>
@@ -5083,7 +5083,7 @@
                         <div class="video-info">
                             <h3>Why Z-Score RSI Beats Regular RSI in Choppy Markets 💡</h3>
                             <div class="channel">Ali Casey | StatOasis</div>
-                            <div class="date">12 minutes ago</div>
+                            <div class="date">20 minutes ago</div>
                         </div>
                     </a>
                 </div>
@@ -7238,7 +7238,7 @@
                         <div class="video-info">
                             <h3>How Yantras Influence Your Body | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">2 hours ago</div>
+                            <div class="date">3 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7326,7 +7326,7 @@
                         <div class="video-info">
                             <h3>A Young Boy Asks Sadhguru About Lies</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">Yesterday</div>
+                            <div class="date">2 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -7546,7 +7546,7 @@
                         <div class="video-info">
                             <h3>Why Porn Addiction Is A Mental Sickness | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">5 days ago</div>
+                            <div class="date">6 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -7832,7 +7832,7 @@
                         <div class="video-info">
                             <h3>Stop Letting the News Ruin Your Peace</h3>
                             <div class="channel">Einzelgänger</div>
-                            <div class="date">4 weeks ago</div>
+                            <div class="date">Sep 12, 2025</div>
                         </div>
                     </a>
                 </div>
