--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>The Man Who changed the pizza Business forever!</h3>
                         <div class="channel">Vito Iacopelli</div>
-                        <div class="date">7 minutes ago</div>
+                        <div class="date">24 minutes ago</div>
                     </div>
                 </a>
             </div>
@@ -134,7 +134,7 @@
                     <div class="video-info">
                         <h3>This Meditation Opens Up Past Life Memories | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">17 minutes ago</div>
+                        <div class="date">33 minutes ago</div>
                     </div>
                 </a>
             </div>
@@ -145,7 +145,7 @@
                     <div class="video-info">
                         <h3>Why Z-Score RSI Beats Regular RSI in Choppy Markets 💡</h3>
                         <div class="channel">Ali Casey | StatOasis</div>
-                        <div class="date">53 minutes ago</div>
+                        <div class="date">1 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -5083,7 +5083,7 @@
                         <div class="video-info">
                             <h3>Why Z-Score RSI Beats Regular RSI in Choppy Markets 💡</h3>
                             <div class="channel">Ali Casey | StatOasis</div>
-                            <div class="date">53 minutes ago</div>
+                            <div class="date">1 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7238,7 +7238,7 @@
                         <div class="video-info">
                             <h3>This Meditation Opens Up Past Life Memories | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">17 minutes ago</div>
+                            <div class="date">33 minutes ago</div>
                         </div>
                     </a>
                 </div>
@@ -8735,7 +8735,7 @@
                         <div class="video-info">
                             <h3>The Man Who changed the pizza Business forever!</h3>
                             <div class="channel">Vito Iacopelli</div>
-                            <div class="date">7 minutes ago</div>
+                            <div class="date">24 minutes ago</div>
                         </div>
                     </a>
                 </div>
