--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                     <div class="video-info">
                         <h3>Why Z-Score RSI Beats Regular RSI in Choppy Markets 💡</h3>
                         <div class="channel">Ali Casey | StatOasis</div>
-                        <div class="date">2 hours ago</div>
+                        <div class="date">3 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -515,9 +515,9 @@
         
             <div class="video">
                 <a href="https://www.youtube.com/shorts/3dIJ9hhnkTU" target="_blank">
-                    <img src="https://i.ytimg.com/vi/3dIJ9hhnkTU/mqdefault.jpg" alt="GINGE STINKER!!!!!">
+                    <img src="https://i.ytimg.com/vi/3dIJ9hhnkTU/mqdefault.jpg" alt="The WORST Shot In Pro Clubs History">
                     <div class="video-info">
-                        <h3>GINGE STINKER!!!!!</h3>
+                        <h3>The WORST Shot In Pro Clubs History</h3>
                         <div class="channel">MoreSidemen</div>
                         <div class="date">4 days ago</div>
                     </div>
@@ -5083,7 +5083,7 @@
                         <div class="video-info">
                             <h3>Why Z-Score RSI Beats Regular RSI in Choppy Markets 💡</h3>
                             <div class="channel">Ali Casey | StatOasis</div>
-                            <div class="date">2 hours ago</div>
+                            <div class="date">3 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -9601,9 +9601,9 @@
             
                 <div class="video">
                     <a href="https://www.youtube.com/shorts/3dIJ9hhnkTU" target="_blank">
-                        <img src="https://i.ytimg.com/vi/3dIJ9hhnkTU/mqdefault.jpg" alt="GINGE STINKER!!!!!">
+                        <img src="https://i.ytimg.com/vi/3dIJ9hhnkTU/mqdefault.jpg" alt="The WORST Shot In Pro Clubs History">
                         <div class="video-info">
-                            <h3>GINGE STINKER!!!!!</h3>
+                            <h3>The WORST Shot In Pro Clubs History</h3>
                             <div class="channel">MoreSidemen</div>
                             <div class="date">4 days ago</div>
                         </div>
